@@ -1,3 +1,10 @@
+2005-01-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* ioctl.c: (if_ioctl,if_ioctl_ipv6,if_get_flags) Replace perror with
+	  zlog_err.
+	* ioctl_solaris.c: (if_ioctl,if_ioctl_ipv6) Replace perror with
+	  zlog_err.
+
 2005-01-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* if_ioctl_solaris.c: (interface_list_ioctl) Save errno before calling
