@@ -1,3 +1,8 @@
+2005-01-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* daemon.c: (daemon) Replace perror with zlog_err.
+	* vty.c: (vty_serv_un) Replace perror with zlog_err.
+
 2005-01-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* buffer.h: Fix comment on buffer_getstr to reflect that it now
